# xiaohongshu-mcp

./: .gitignore  LICENSE  README.md  TEST_GUIDE.md  cookies.example.json  install.sh  pyproject.toml
xiaohongshu_mcp/: __init__.py  client.py  server.py
