[project]
name = "xiaohongshu-mcp"
version = "0.1.0"
description = "MCP server for Xiaohongshu (小红书) API integration"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
]

[project.scripts]
xiaohongshu-mcp = "xiaohongshu_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
